testdata/baselines/reference/submodule/conformance/classAbstractConstructorAssignability.errors.txt
classAbstractConstructorAssignability.ts(7,5): error TS2322: Type '{ new(): B; prototype: B; }' is not assignable to type '{ new(): A; prototype: A; }'.
  Cannot assign an abstract constructor type to a non-abstract constructor type.
classAbstractConstructorAssignability.ts(9,5): error TS2322: Type '{ new(): B; prototype: B; }' is not assignable to type '{ new(): C; prototype: C; }'.
  Cannot assign an abstract constructor type to a non-abstract constructor type.
classAbstractConstructorAssignability.ts(12,1): error TS2511: Cannot create an instance of an abstract class.


==== classAbstractConstructorAssignability.ts (3 errors) ====
    class A {}
    
    abstract class B extends A {}
    
    class C extends B {}
    
    var AA : typeof A = B;
        ~~
!!! error TS2322: Type '{ new(): B; prototype: B; }' is not assignable to type '{ new(): A; prototype: A; }'.
!!! error TS2322:   Cannot assign an abstract constructor type to a non-abstract constructor type.
    var BB : typeof B = A;
    var CC : typeof C = B;
        ~~
!!! error TS2322: Type '{ new(): B; prototype: B; }' is not assignable to type '{ new(): C; prototype: C; }'.
!!! error TS2322:   Cannot assign an abstract constructor type to a non-abstract constructor type.
    
    new AA;
    new BB;
    ~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    new CC;